This question is from Leetcode

--- a/palindrome.ipynb
+++ b/palindrome.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "palindrome.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN2iQvH/hdsxofR3MjvxMKa",
+      "authorship_tag": "ABX9TyOlFwHUMwDKkuNDO4Bj+BkX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ayRDSFPBRo8Q",
-        "outputId": "aa3c6da2-f6ee-458f-ed6a-b73b01125e33"
+        "outputId": "1a516a3d-7021-4800-8076-8acd511de95a"
       },
       "source": [
         "\n",
@@ -70,29 +70,20 @@
         "wordList = [\"Never odd or even\", \"tattarrattat\", \"neon\"]\n",
         "for a in wordList:\n",
         "    aa = a.replace(\" \", \"\") #if space, strip\n",
-        "    print('\\n' + aa)\n",
+        "    #print('\\n' + aa)\n",
         "    n = len(aa)\n",
-        "    print(\"string length: \" + str(n))\n",
+        "    #print(\"string length: \" + str(n))\n",
         "    print(\"\\npalindrome: \" + str(aa) + \" is \" + str(isPalindrome(aa, 0, n-1)))"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\n",
-            "Neveroddoreven\n",
-            "string length: 14\n",
-            "\n",
             "palindrome: Neveroddoreven is True\n",
             "\n",
-            "tattarrattat\n",
-            "string length: 12\n",
-            "\n",
             "palindrome: tattarrattat is True\n",
-            "\n",
-            "neon\n",
-            "string length: 4\n",
             "\n",
             "palindrome: neon is False\n"
           ],
