--- a/palindrome.ipynb
+++ b/palindrome.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "palindrome.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlFwHUMwDKkuNDO4Bj+BkX",
+      "authorship_tag": "ABX9TyP5kT+aMHA4P2y73SPDbdue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,58 +38,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ayRDSFPBRo8Q",
-        "outputId": "1a516a3d-7021-4800-8076-8acd511de95a"
+        "id": "ayRDSFPBRo8Q"
       },
       "source": [
         "\n",
         "def isPalindrome(word, s, e):\n",
         "    #print(\"input: \" + word[s].lower() + '-' + word[e].lower())\n",
         "        \n",
-        "    \"\"\" base case \"\"\"\n",
+        "    \"\"\" one character \"\"\"\n",
         "    if s == e:\n",
-        "        print (\"single letter palindrome: \" + word)\n",
+        "        print (\"\\nsingle palindrome => \" + word[s])\n",
         "        return True\n",
         "    \n",
         "    #end if first/last don't match\n",
         "    if(word[s].lower() != word[e].lower()):\n",
         "        return False\n",
         "\n",
-        "    \n",
         "    #work on remaining, check for end condition\n",
         "    if(s < e):        \n",
         "        #print(word[s].lower() + '-' + word[e].lower())\n",
         "        return  isPalindrome(word, s+1, e-1)\n",
         "        \n",
-        "\n",
         "    return True\n",
         "\n",
-        "wordList = [\"Never odd or even\", \"tattarrattat\", \"neon\"]\n",
+        "wordList = [\"\", \"Never odd or even\", \"tattarrattat\", \"neon\", \"ele\"]\n",
         "for a in wordList:\n",
         "    aa = a.replace(\" \", \"\") #if space, strip\n",
         "    #print('\\n' + aa)\n",
         "    n = len(aa)\n",
-        "    #print(\"string length: \" + str(n))\n",
-        "    print(\"\\npalindrome: \" + str(aa) + \" is \" + str(isPalindrome(aa, 0, n-1)))"
+        "    \n",
+        "    if(n == 0):\n",
+        "            print(\"\\npalindrome {} is: \" + str(True))\n",
+        "    else:\n",
+        "        #print(\"string length: \" + str(n))\n",
+        "        print(\"\\npalindrome: \" + str(aa) + \" is \" + str(isPalindrome(aa, 0, n-1)))"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "palindrome: Neveroddoreven is True\n",
-            "\n",
-            "palindrome: tattarrattat is True\n",
-            "\n",
-            "palindrome: neon is False\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
